fix: make it an "actual dark" theme

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "themes": [
       {
         "label": "Oolong",
-        "uiTheme": "vs",
+        "uiTheme": "vs-dark",
         "path": "./themes/Oolong-color-theme.json"
       }
     ]
